sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

		while(n!=0){
			for(i<- 0 to getNombreValeurs()-2){
				var n :Int=0
				if(!plusPetit(i,i+1)){
					echange(i,i+1)
					n=n+1
				}
	
			}
		}
}
